[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "file-history-dups"
version = "0.1.0"
authors = [
    {name = "Antti Kaihola", email = "13725+akaihola@users.noreply.github.com"},
]
description = "Remove duplicate files in Windows File History backups"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.6"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.scripts]
file-history-dups = "file_history_dups.__main__:main"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = ["pytest"]
